# namepull

./: .gitignore  Dockerfile  README.md  namepull.py  pyproject.toml  requirements.txt  sample.flags
.github/workflows/: python-tox.yml
namepull/: __init__.py
